MAINTAINERCLEANFILES = Makefile.in config.h.in~ config.h.in

SUBDIRS = generated


include_HEADERS = \
Eon.h

EON_UTILHEADERS = \
eon_main.h \
eon_button.h \
eon_canvas.h \
eon_checkbox.h \
eon_container.h \
eon_element.h \
eon_image.h \
eon_input.h \
eon_label.h \
eon_layout.h \
eon_progressbar.h \
eon_radio.h \
eon_stack.h \
eon_theme.h \
eon_window.h \
eon_ecore_sdl.h

installed_headersdir = $(prefix)/include/eon
installed_headers_DATA = $(EON_UTILHEADERS)
