MAINTAINERCLEANFILES = Makefile.in config.h.in~ config.h.in

SUBDIRS = generated


include_HEADERS = \
Eon.h

EON_UTILHEADERS = \
eon_main.h \
eon_button.h \
eon_canvas.h \
eon_checkbox.h \
eon_color.h \
eon_container.h \
eon_element.h \
eon_entry.h \
eon_frame.h \
eon_image.h \
eon_input.h \
eon_label.h \
eon_layout.h \
eon_progressbar.h \
eon_radio.h \
eon_scrollbar.h \
eon_scrollview.h \
eon_spin.h \
eon_splitter.h \
eon_stack.h \
eon_tab.h \
eon_theme.h \
eon_theme_button_base.h \
eon_theme_button.h \
eon_theme_color.h \
eon_theme_container.h \
eon_theme_entry.h \
eon_theme_frame.h \
eon_theme_image.h \
eon_theme_layout.h \
eon_theme_radio.h \
eon_theme_checkbox.h \
eon_theme_widget.h \
eon_theme_label.h \
eon_theme_progressbar.h \
eon_theme_scrollbar.h \
eon_theme_scrollview.h \
eon_theme_spin.h \
eon_theme_splitter.h \
eon_theme_toggle.h \
eon_toggle.h \
eon_widget.h \
eon_window.h \
eon_wrapper.h \
eon_ecore_remote.h \
eon_ecore_sdl.h

installed_headersdir = $(prefix)/include/eon
installed_headers_DATA = $(EON_UTILHEADERS)
