MAINTAINERCLEANFILES = Makefile.in

check_PROGRAMS = \
eon_test_button \
eon_test_button_image \
eon_test_canvas \
eon_test_checkbox \
eon_test_image \
eon_test_frame \
eon_test_label \
eon_test_progressbar \
eon_test_radio \
eon_test_scrollview \
eon_test_scrollbar \
eon_test_wrapper

eon_test_button_SOURCES = eon_test_button.c
eon_test_button_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_button_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_button_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_button_image_SOURCES = eon_test_button_image.c
eon_test_button_image_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_button_image_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_button_image_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_radio_SOURCES = eon_test_radio.c
eon_test_radio_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_radio_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_radio_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_label_SOURCES = eon_test_label.c
eon_test_label_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_label_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_label_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_checkbox_SOURCES = eon_test_checkbox.c
eon_test_checkbox_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_checkbox_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_checkbox_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_scrollview_SOURCES = eon_test_scrollview.c
eon_test_scrollview_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_scrollview_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_scrollview_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_image_SOURCES = eon_test_image.c
eon_test_image_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_image_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_image_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_progressbar_SOURCES = eon_test_progressbar.c
eon_test_progressbar_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_progressbar_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_progressbar_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_canvas_SOURCES = eon_test_canvas.c
eon_test_canvas_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_canvas_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_canvas_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_wrapper_SOURCES = eon_test_wrapper.c
eon_test_wrapper_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_wrapper_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_wrapper_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_frame_SOURCES = eon_test_frame.c
eon_test_frame_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_frame_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_frame_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_scrollbar_SOURCES = eon_test_scrollbar.c
eon_test_scrollbar_CFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_scrollbar_DEPENDENCIES = $(top_builddir)/src/lib/libeon.la
eon_test_scrollbar_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

