MAINTAINERCLEANFILES = Makefile.in

# old programs
# eon_test_canvas \
# eon_test_color \
# eon_test_entry \
# eon_test_frame \
# eon_test_label \
# eon_test_loader \
# eon_test_progressbar \
# eon_test_splitter \
# eon_test_spin \
# eon_test_toggle \
# eon_test_wrapper

check_PROGRAMS = \
eon_test_button01 \
eon_test_button02 \
eon_test_button03 \
eon_test_button04 \
eon_test_button_image \
eon_test_checkbox \
eon_test_image \
eon_test_radio \
eon_test_scrollbar \
eon_test_scrollview

if BUILD_EXTENSION_ESVG
check_PROGRAMS += eon_test_svg
endif

#eon_test_canvas_SOURCES = eon_test_canvas.c
#eon_test_canvas_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_canvas_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_color_SOURCES = eon_test_color.c
#eon_test_color_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_color_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_entry_SOURCES = eon_test_entry.c
#eon_test_entry_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_entry_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_frame_SOURCES = eon_test_frame.c
#eon_test_frame_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_frame_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_label_SOURCES = eon_test_label.c
#eon_test_label_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_label_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_loader_SOURCES = eon_test_loader.c
#eon_test_loader_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_loader_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_progressbar_SOURCES = eon_test_progressbar.c
#eon_test_progressbar_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_progressbar_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_splitter_SOURCES = eon_test_splitter.c
#eon_test_splitter_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_splitter_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_spin_SOURCES = eon_test_spin.c
#eon_test_spin_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_spin_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_toggle_SOURCES = eon_test_toggle.c
#eon_test_toggle_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_toggle_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

#eon_test_wrapper_SOURCES = eon_test_wrapper.c
#eon_test_wrapper_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
#eon_test_wrapper_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_svg_SOURCES = eon_test_svg.c
eon_test_svg_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_svg_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_button01_SOURCES = eon_test_button01.c
eon_test_button01_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_button01_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_button02_SOURCES = eon_test_button02.c
eon_test_button02_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_button02_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_button03_SOURCES = eon_test_button03.c
eon_test_button03_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_button03_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_button04_SOURCES = eon_test_button04.c
eon_test_button04_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_button04_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_button_image_SOURCES = eon_test_button_image.c
eon_test_button_image_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_button_image_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_radio_SOURCES = eon_test_radio.c
eon_test_radio_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_radio_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_checkbox_SOURCES = eon_test_checkbox.c
eon_test_checkbox_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_checkbox_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_scrollview_SOURCES = eon_test_scrollview.c
eon_test_scrollview_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_scrollview_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_image_SOURCES = eon_test_image.c
eon_test_image_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_image_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@

eon_test_scrollbar_SOURCES = eon_test_scrollbar.c
eon_test_scrollbar_CPPFLAGS = -I. -I$(top_srcdir)/src/include @EON_CFLAGS@
eon_test_scrollbar_LDADD = $(top_builddir)/src/lib/libeon.la @EON_LIBS@
