MAINTAINERCLEANFILES = \
Makefile.in

SUBDIRS = ecore_common ecore_sdl

noinst_LTLIBRARIES = libbackend.la

libbackend_la_DEPENDENCIES = \
ecore_common/libeon_ecore_common.la \
ecore_sdl/libeon_ecore_sdl.la

libbackend_la_LIBADD = \
ecore_common/libeon_ecore_common.la \
ecore_sdl/libeon_ecore_sdl.la

libbackend_la_SOURCES =
