MAINTAINERCLEANFILES = Makefile.in

AM_CPPFLAGS = \
-I$(top_srcdir)/src/include \
-I$(top_srcdir)/src/include/generated \
-I. \
@EON_CFLAGS@

noinst_LTLIBRARIES = libcore.la

libcore_la_SOURCES = \
eon_backend.c \
eon_button_base.c \
eon_button.c \
eon_canvas.c \
eon_color.c \
eon_container.c \
eon_element.c \
eon_entry.c \
eon_frame.c \
eon_image.c \
eon_input.c \
eon_label.c \
eon_layout.c \
eon_main.c \
eon_misc.c \
eon_checkbox.c \
eon_progressbar.c \
eon_radio.c \
eon_spin.c \
eon_stack.c \
eon_scrollbar.c \
eon_splitter.c \
eon_scrollview.c \
eon_tab.c \
eon_theme.c \
eon_toggle.c \
eon_wrapper.c \
eon_widget.c \
eon_window.c

libcore_la_LIBADD =

libcore_la_DEPENDENCIES =

libcore_la_LDFLAGS =
